background slide w/ flicker bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,15 +34,19 @@ button:hover {
 /* --- Landing Page --- */
 
 .Landing {
-  background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(../images/travel_bg.jpg);
+  background-image: url(../images/travel_bg.jpg);
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
+  animation: backgroundslide 20s linear infinite 0s;
+  animation-timing-function: ease-in-out;
   height: 100vh;
   text-align: center;
  }
-.Landing .landing-logo { position: absolute; top: 50%; margin-top: -6%; left: 50%; margin-left: -100px; text-align: center; }
+
+ .Landing section { height: 100vh; background-color: rgba(0,0,0,0.1); }
+.Landing .landing-logo { position: absolute; top: 50%; margin-top: -143px; left: 50%; margin-left: -100px; text-align: center; }
 .Landing .landing-logo img { height: 245px; width: 100px; opacity: 0.6; }
 
 .Landing .headings { margin-top: 230px; }
@@ -163,6 +167,13 @@ button:hover {
 
 
 /* --- Responsiveness --- */
+
+@keyframes backgroundslide {
+  0%, 100% {   background-image: url(../images/travel_bg.jpg); }
+  25% {   background-image: url(../images/widetemple.jpg); }
+  50% {   background-image: url(../images/pondwide.jpg); }
+  75% {   background-image: url(../images/treeface.jpg); }
+}
 
 
 
